# LSR_SKUD

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .replit  Dockerfile  GITLAB_CICD_REPORT.md  GITLAB_QUICKSTART.md  GITLAB_SETUP.md  Makefile  QUICK_REFERENCE.md  README.md  app.py  check_gpu.py  config.py  debug_bot.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  replit.md  run_bot_debug.py
analytics/: __init__.py  batch_analytics.py
attached_assets/: EventHistory_comments_1772207843389.txt  Pasted-A-Telegram-bot-system-that-integrates-access-control-ma_1772207446869.txt  ReadMe_1772207843390.txt  SoapIntegration_1772207802966.py  connection_config_1772207816923.json  event_filter_1772207816924.json  event_filter_1772207816924.py  http_server_1772207816924.py  main_1772207816923.py
batch_processing/: README_batch.md  batch_processor.py  manage_videos.sh  neural_worker.py  plates.csv
benchmarks/: anpr_performance.py
bot/: __init__.py  telegram_bot.py
config/: __init__.py  anpr_config.py  app_config.py
data/: gate_control.db
db/: __init__.py  anpr_integration.py  anpr_schema.py  database.py
deploy/: README.md  deploy.sh  production.yaml  prometheus.yml
docs/: LOG_ANALYSIS_TERMINAL6.md  NEXT_STEPS_AND_SUMMARY.md  architecture.md  gap_analysis.md  nvidia-driver-status.md  user_guide.md
gate/: __init__.py  controller.py  tag_cache.py
monitoring/: __init__.py  batch_metrics.py
notifications/: __init__.py  scheduler.py
pages/: 1_📷_Cameras.py  2_🔍_Recognition.py  3_🎫_Passes.py  4_🧠_Training.py  5_⚙️_Settings.py  __init__.py  (+2 more)
(+33 files in other folders)
