[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.6",
    "pyyaml>=6.0.3",
    "streamlit>=1.54.0",
    "ultralytics",
    "easyocr",
    "opencv-python",
    "torch",
    "psycopg2-binary",
]
