[project]
name = "lsr-skud"
version = "0.1.0"
description = "LSR SKUD - Gate Control System with ANPR"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.6",
    "pyyaml>=6.0.3",
    "streamlit>=1.54.0",
    "ultralytics",
    "easyocr",
    "opencv-python",
    "torch",
    "psycopg2-binary",
    "plotly>=5.0.0",
    "pandas>=1.5.0",
    "numpy",
    "psutil",
    "zeep",
    "requests",
    "httpx[socks]",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0", 
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
